--- a/inst/doc/IntroSyn.tex
+++ b/inst/doc/IntroSyn.tex
@@ -779,7 +779,7 @@ Object of class 'cvData'
 Results: 
                       Min 	  Mean +- pooled SE 	  Max 
  Predictive ability:  0.2916  	  0.3697 +- 0.009471  	  0.4323 
- Bias:                0.6830  	  0.9927 +- 0.02621  	  1.2195 
+ Bias (reg. slope)    0.6830  	  0.9927 +- 0.02621  	  1.2195 
 
 Seed start:  123 
 Seed replications: 
